# dragoon_simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
gazebo_model/dragoon/: model.config  model.sdf
gazebo_model/test_robot/: model.sdf
include/: grid_generator.h  myAlgo.h  myPidController.h  myVehState.h  simple_node.h
launch/: dragoon.rviz  gazebo.launch  grid.launch  markers.launch  python_node.launch  rviz.launch  simple_node.launch
meshes/: wheel.dae
rviz/: dragoon.rviz  markers.rviz
src/: myAlgo.cpp
src/gazebo_api/: gazebo_api.cpp
src/grid_generator/: grid_generator.cpp  map_frame_broadcaster.cpp
src/marker_draw/: markers.cpp
src/python_node/: python_node.py
src/simple_node/: simple_node.cpp  simple_node.h
test/: unittest.cpp
urdf/: dragoon.urdf  dragoon.xacro  dragoon_macros.xacro  test.xacro
urdf/meshes/: wheel.STL
worlds/: dragoon.world  dragoon_grid_test.world  dragoon_rubble.world  dragoon_training.world
