<package format="2">
  <name>dragoon_simulation</name>
  <version>0.0.1</version>
  <description>simulating for path planning</description>
  <maintainer email="bkolligs@andrew.cmu.edu">benkolligs</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>actionlib_msgs</depend>
  <depend>dragoon_messages</depend>
  <depend>urdf</depend>

  <exec_depend>message_generation</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
